--- a/index.html
+++ b/index.html
@@ -2,53 +2,50 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Drag Papers ❤️</title>
+  <title> semoga </title>
   <link rel='stylesheet' href='https://fonts.googleapis.com/css2?family=Short+Stack&amp;family=Homemade+Apple&amp;display=swap'><link rel="stylesheet" href="./style.css">
 
 </head>
 <body>
-<!-- partial:index.partial.html -->
-<!-- A pen by Developer Rahul  -->
+
 <div class="paper heart">
 
 </div>
 
   
 <div class="paper image">
-  <p> and I fallen in</p>
-    <p>Love with You 😍 </p>
+  <p> I fallen in </p>
+    <p> love with You </p>
    <img src="images/1.jpeg" />
 </div>
 
 <div class="paper image">
-  <p</p>
+  <p> </p>
   <img src="images/2.jpeg" />
 </div>
 
 <div class="paper image">
-  <p>How can be </p>
-   <p> someone so cute ❤️ </p>
-
+   <p> </p>
   <img src="images/3.jpg" />
 </div>
 
 
 
 <div class="paper red">
-<p class="p1"> and My Favorite</p>
-<p class="p2">Person 😍</p>
+<p class="p1"> my favorite </p>
+<p class="p2"> person </p>
 </div>
 
 <div class="paper">
-<p class="p1">You are Cute </p>
-  <p class="p1">Amazing <span style="color: red !important;">❤️</span></p>
+<p class="p1"> you are cute </p>
+  <p class="p1"> <span style="color: red !important;">❤️</span></p>
 </div>
 
 <div class="paper">
-<p class="p1">Drag the papers to move!</p>
+<p class="p1"> Geser nay </p>
 </div>
-<!-- partial -->
-  <script  src="./script.js"></script>
+
+  <script  src="./mobile.js"></script>
 
 </body>
 </html>
