--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title> semoga </title>
+  <title> ppppp </title>
   <link rel='stylesheet' href='https://fonts.googleapis.com/css2?family=Short+Stack&amp;family=Homemade+Apple&amp;display=swap'><link rel="stylesheet" href="./style.css">
 
 </head>
@@ -14,8 +14,8 @@
 
   
 <div class="paper image">
-  <p> I fallen in </p>
-    <p> love with You </p>
+  <p>  </p>
+    <p>  </p>
    <img src="images/1.jpeg" />
 </div>
 
@@ -32,17 +32,17 @@
 
 
 <div class="paper red">
-<p class="p1"> my favorite </p>
-<p class="p2"> person </p>
+<p class="p1">  </p>
+<p class="p2">  </p>
 </div>
 
 <div class="paper">
-<p class="p1"> you are cute </p>
+<p class="p1">  </p>
   <p class="p1"> <span style="color: red !important;">❤️</span></p>
 </div>
 
 <div class="paper">
-<p class="p1"> Geser nay </p>
+<p class="p1"> Geser </p>
 </div>
 
   <script  src="./mobile.js"></script>
