--- a/index.html
+++ b/index.html
@@ -14,30 +14,28 @@
 
   
 <div class="paper image">
-  <p>  </p>
+  <p> tes </p>
     <p>  </p>
-   <img src="images/1.jpeg" />
 </div>
 
 <div class="paper image">
-  <p> </p>
-  <img src="images/2.jpeg" />
+  <p> tes </p>
 </div>
 
 <div class="paper image">
-   <p> </p>
-  <img src="images/3.jpg" />
+   <p> tes </p>
+  <img src="images/4.jpg" />
 </div>
 
 
 
 <div class="paper red">
-<p class="p1">  </p>
+<p class="p1"> tes </p>
 <p class="p2">  </p>
 </div>
 
 <div class="paper">
-<p class="p1">  </p>
+<p class="p1"> tes </p>
   <p class="p1"> <span style="color: red !important;">❤️</span></p>
 </div>
 
