--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <div class="paper image">
    <p> tes </p>
-  <img src="images/4.jpg" />
+//  <img src="images/4.jpg" />
 </div>
 
 
@@ -36,7 +36,7 @@
 
 <div class="paper">
 <p class="p1"> tes </p>
-  <p class="p1"> <span style="color: red !important;">❤️</span></p>
+//  <p class="p1"> <span style="color: red !important;">❤️</span></p>
 </div>
 
 <div class="paper">
