--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <p class="p1"> Geser </p>
 </div>
 
-  <script  src="./script.js"></script>
+  <script  src="./mobile.js"></script>
 
 </body>
 </html>
