--- a/index.html
+++ b/index.html
@@ -14,29 +14,29 @@
 
   
 <div class="paper image">
-  <p> tes </p>
-    <p>  </p>
+  <p> tapi bertemu Topaz di event </p>
+  <p> membuat semua terbayar </p>
 </div>
 
 <div class="paper image">
-  <p> tes </p>
+  <p> gw kalah rate off mulu </p>
+  <p> pas gacha topaz fakk </p>
 </div>
 
 <div class="paper image">
-   <p> tes </p>
-//  <img src="images/4.jpg" />
+   <p> kalau iya </p>
+   <p> terimakasih udh jadi topaz hhe </p>
 </div>
 
 
 
 <div class="paper red">
-<p class="p1"> tes </p>
-<p class="p2">  </p>
+<p class="p1"> kamu yg cosplay jadi topaz kannn? </p>
 </div>
 
 <div class="paper">
-<p class="p1"> tes </p>
-//  <p class="p1"> <span style="color: red !important;">❤️</span></p>
+<p class="p1"> Hiiiiiii </p>
+<p class="p1"> <span style="color: red !important;">❤️</span></p>
 </div>
 
 <div class="paper">
