--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
 <body>
 
 <div class="paper heart">
-
+  <p> lain kali cosplay bareng hha </p>
 </div>
 
-  
 <div class="paper image">
   <p> tapi bertemu Topaz di event </p>
   <p> membuat semua terbayar </p>
