--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
 
 
 <div class="paper red">
-<p class="p1"> kamu yg cosplay jadi topaz kannn? </p>
+  <p class="p1"> kamu yg cosplay </p>
+  <p class="p1"> jadi topaz kannn? </p>
 </div>
 
 <div class="paper">
