--- a/index.html
+++ b/index.html
@@ -11,26 +11,24 @@
 <div class="paper heart">
 </div>
 
-<div class="paper image">
+<div class="paper red">
   <p> lain kali cosplay bareng hha </p>
 </div>
 
-<div class="paper image">
+<div class="paper red">
   <p> tapi bertemu Topaz di event </p>
   <p> membuat semua terbayar </p>
 </div>
 
-<div class="paper image">
+<div class="paper red">
   <p> gw kalah rate off mulu </p>
   <p> pas gacha topaz fakk </p>
 </div>
 
-<div class="paper image">
+<div class="paper red">
    <p> kalau iya </p>
    <p> terimakasih udh jadi topaz hhe </p>
 </div>
-
-
 
 <div class="paper red">
   <p class="p1"> kamu yg cosplay </p>
